Release 1.1.0: Auto-Sort, Drive & release workflow
Add GitHub Actions Build & Release workflow and bump version to 1.1.0. Prepare release packaging: fat JAR, run.sh/run.bat launchers, and release ZIP with placeholder credentials. Introduce Auto-Sort feature (DriveAutoSortService + AutoSortDialog) and update Google Drive / face-recognition services and photo UI to support bulk auto-sorting and offline photo browsing. Update pom.xml shade plugin to merge META-INF/services and exclude signature files to avoid runtime SecurityException. Add CHANGELOG, README updates, credentials.json placeholder, and .gitignore tweaks (photo_cache, tokens). Also include compacted/refactored model and DB/DAO updates as part of the 1.1.0 cleanup.